Refactored lazy itp strategies